--- a/src/test/resources/config_stage.properties
+++ b/src/test/resources/config_stage.properties
@@ -1,4 +1,5 @@
 DDG_URL=https://duckduckgo.com/
 DDG_API_URL=https://api.duckduckgo.com/
-ReportConfigPath=src/test/resources/extent-config.xml
+DEMOQA_URL=https://demoqa.com
+ImplicitWait=10
 
