--- a/src/test/resources/config_stage.properties
+++ b/src/test/resources/config_stage.properties
@@ -1,5 +1,6 @@
 DDG_URL=https://duckduckgo.com/
 DDG_API_URL=https://api.duckduckgo.com/
 DEMOQA_URL=https://demoqa.com
+REQRES_URL=https://reqres.in
 ImplicitWait=10
 
