gh-pages update

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -2,19 +2,15 @@ extent.reporter.email.start=false
 extent.reporter.html.start=true
 extent.reporter.logger.start=true
 extent.reporter.spark.start=false
-
 extent.reporter.html.config=src/test/resources/extent-config.xml
 extent.reporter.logger.config=src/test/resources/extent-config.xml
 extent.reporter.spark.config=src/test/resources/extent-config.xml
-
 #extent.reporter.email.out=false
-extent.reporter.html.out=Reports/tas.html
+extent.reporter.html.out=Reports/tas-n.html
 extent.reporter.logger.out=Reports/ExtentLoggerReport/
 extent.reporter.spark.out=Reports/Spark/
-
-screenshot.dir=Screenshots/
-screenshot.rel.path=../Screenshots/
-
+screenshot.dir=Reports/Screenshots/
+screenshot.rel.path=./Screenshots/
 #Adding folder name and non repeating pattern
-basefolder.name=Reports/AutomationReports
-basefolder.datetimepattern=d-MMM-YY HH-mm-ss
+#basefolder.name=Reports/AutomationReports
+#basefolder.datetimepattern=d-MMM-YY HH-mm-ss
