gh-pages update

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -6,7 +6,7 @@ extent.reporter.html.config=src/test/resources/extent-config.xml
 extent.reporter.logger.config=src/test/resources/extent-config.xml
 extent.reporter.spark.config=src/test/resources/extent-config.xml
 #extent.reporter.email.out=false
-extent.reporter.html.out=Reports/tas-n.html
+extent.reporter.html.out=Reports/index.html
 extent.reporter.logger.out=Reports/ExtentLoggerReport/
 extent.reporter.spark.out=Reports/Spark/
 screenshot.dir=Reports/Screenshots/
